@startuml
interface Filesystem{
    + Filesystem()
    + RC_t openFile(const char filename[], OpenMode_t openMode)
    + bool hasOpenFile()
    + RC_t closeFile()
    + RC_t write(const uint8_t* data, uint32_t n)
    + RC_t flush()
    + RC_t read(uint8_t* data, uint32_t n)
    + RC_t readUntil(uint8_t* data, uint32_t n, uint8_t end)
    + bool eof()
    + bool fileExists(const char filename[])
    + RC_t deleteFile(const char filename[])
}
class LittleFilesystem
class DesktopFilesystem
Filesystem <|-- LittleFilesystem
Filesystem <|-- DesktopFilesystem

interface Transformer{
    # std::shared_ptr<Transformer> m_next
    + float_t applyTransformations(float_t input)
    # float_t transform(float_t input)
}
class SimpleMovingAverageFilter{
    - uint32_t m_bufferSize
    - float_t* m_averageBuffer
    - uint32_t m_nextBufferPosition
    - bool m_bufferInitialized
    + SimpleMovingAverageFilter(uint32_t n, std::shared_ptr<Transformer> next)
}
Transformer <|-- SimpleMovingAverageFilter
class Remapper{
    - float_t m_inMin, m_inMax, m_outMin, m_outMax
    + Remapper(float_t inMin, float_t inMax, float_t outMin, float_t outMax,
             std::shared_ptr<Transformer> next = std::shared_ptr<Transformer>()
}
Transformer <|-- Remapper

abstract class Sensor{
    # std::shared_ptr<Transformer> m_transformer
    + Sensor(std::shared_ptr<Transformer> transformer)
    + float_t readSensor()
    # readSensorRaw()
}
class ADCSensor{
    - m_adcPin
    + ADCSensor(uint32_t pin, std::shared_ptr<Transformer> transformer)
}
Sensor <|-- ADCSensor
Sensor o-- Transformer

class SensorFactory{
    {static} Sensor* createADCSensor(uint32_t pin, std::shared_ptr<Transformer> transformer)
}
SensorFactory <-- ADCSensor
@enduml